# sdc-cust-qual

./: .env.example  .gitignore  Dockerfile  Dockerfile.test  docker-compose.yml  pyproject.toml
configs/: inference.yaml  ontology.yaml  sft.toml
data/sft/: all_data.json  test.json  train.json  val.json
demo/: app.py  app_full.py  docker-compose.demo.yml  requirements.txt  run_demo.sh  run_demo_simple.sh  run_full_demo.sh  run_local_demo.sh
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  FUNCTION_SPECIFICATION.md  OPERATION_MANUAL.md  PRESENTATION_OUTLINE.md  PROPOSAL.md  PROPOSAL_qual.md  README.md  SCENARIO_GUIDE.md  USER_MANUAL.md  cs_workflow_demo_scenario.md
scripts/: evaluate.py  prepare_data.py  test_cs_workflow.py  train_sft.py
src/api/: main.py  routes.py  schemas.py  test_server.py
src/bigdata/: __init__.py
src/bigdata/connectors/: __init__.py  greenplum.py  oracle.py  s3.py
src/bigdata/cs_workflow/: __init__.py  cs_complaint.py  quality_analysis.py  report_generator.py
src/bigdata/datalake/: __init__.py  extractor.py  tracker.py
src/bigdata/mockdata/: __init__.py  generator.py  schemas.py
src/bigdata/pipeline/: __init__.py  data_pipeline.py  parquet_converter.py
src/bigdata/spark/: __init__.py  processor.py
src/data/: augmentation.py  constants.py  dataset.py  llava_converter.py  preprocessing.py
src/inference/: analyzer.py  pipeline.py  postprocess.py  types.py
src/model/: cosmos_wrapper.py  quantization.py  trainer.py
src/ontology/: graph_store.py  knowledge_base.py  reasoning.py  schema.py
tests/: test_data.py  test_inference.py  test_ontology.py
